--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@
     width: 100%;
     height: 300px;
 }
+.icons{
+    margin-right: 1%;
+    width: 3%;
+    height:5vh;
+    background-color: red;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
